# colo

./: .gitignore  LICENSE  README.md  predict.py  pyproject.toml  requirements.txt
src/: __init__.py
src/model/: __init__.py  utils.py
src/model/colo/: __init__.py  bart_base.py  bert_base.py
src/model/extractor/: __init__.py  bartsum.py  bertsum.py  encoder.py
src/rouge/: __init__.py  rouge_score.py
